opa-policies/valid-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valid-nginx
  namespace: default
  labels:
    app: nginx
    environment: demo
    version: v1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        environment: demo
        version: v1.0
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
